add autentification with google and swagger docs these routs
