# src/controllers/auth.js
@@ -1,4 +1,5 @@
 import {
+  loginOrRegister,
   logoutUser,
   refreshUserSession,
   registerUser,
@@ -6,6 +7,7 @@ import {
   resetPassword,
 } from '../services/auth.js';
 import { loginUser } from '../services/auth.js';
+import { getOAuthURL, validateCode } from '../utils/googleOAuth.js';
 
 export const registerUserController = async (req, res) => {
   const user = await registerUser(req.body);
@@ -81,3 +83,42 @@ export const resetPasswordController = async (req, res) => {
     data: {},
   });
 };
+
+export function getOAuthURLController(req, res) {
+  const url = getOAuthURL();
+
+  res.json({
+    status: 200,
+    message: 'Successfully get OAuth url',
+    data: {
+      oauth_url: url,
+    },
+  });
+}
+
+export async function confirmOAuthController(req, res) {
+  const ticket = await validateCode(req.body.code);
+
+  const session = await loginOrRegister(
+    ticket.payload.email,
+    ticket.payload.name,
+  );
+
+  res.cookie('sessionId', session._id, {
+    httpOnly: true,
+    expire: session.refreshTokenValidUntil,
+  });
+
+  res.cookie('refreshToken', session.refreshToken, {
+    httpOnly: true,
+    expire: session.refreshTokenValidUntil,
+  });
+
+  res.json({
+    status: 200,
+    message: 'Successfully authenticated the user via Google OAuth.',
+    data: {
+      accessToken: session.accessToken,
+    },
+  });
+}
